# rework-pysatl-cpd

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yaml  docs-deploy.yaml  docs-preview.yaml
assets/userguide/examples/: yaml_multi.yaml  yaml_single.yaml
docs/: Makefile
docs/source/: conf.py  contributing.rst  generate_api.py  generate_user_guide.py  index.rst
docs/source/_static/: custom.css
docs/source/user_guide/: index.rst
notebooks/examples/: example-noreset-benchmark.ipynb  example-reset-shewhart.ipynb
notebooks/user_guide/: 01-data-api.ipynb  02-generator-api.ipynb  03-core-api-cpd.ipynb  03-cpd-api.ipynb  04-core-api-visualization.ipynb  04-visualization-api.ipynb  05-core-api-reset-benchmarking.ipynb  05-reset-benchmarking-api.ipynb  06-core-api-noreset-benchmarking.ipynb  06-noreset-benchmarking-api.ipynb
pysatl_cpd/: __init__.py
pysatl_cpd/algorithms/: __init__.py
pysatl_cpd/algorithms/online/: __init__.py
pysatl_cpd/analysis/: __init__.py
pysatl_cpd/analysis/metrics/: __init__.py  utils.py
pysatl_cpd/analysis/visualization/: __init__.py  specs.py  typedefs.py  utils.py
pysatl_cpd/benchmark/: __init__.py  benchmark.py  registry.py  scenarios.py  tooling.py
pysatl_cpd/benchmark/online/: __init__.py
pysatl_cpd/core/: __init__.py  change_point_detector.py  detection_trace.py  single_run.py
pysatl_cpd/core/online/: __init__.py  ionline_algorithm.py
pysatl_cpd/data/: __init__.py
pysatl_cpd/data/dataset/: __init__.py  dataset.py  idataset.py  state_dataset.py
pysatl_cpd/data/generator/: __init__.py  config.py  dataset.py  models.py  presets.py  series.py  specs.py
pysatl_cpd/data/loaders/: __init__.py  folder_dataset.py
pysatl_cpd/data/providers/: __init__.py  data_provider.py
pysatl_cpd/data/typedefs/: __init__.py  annotations.py  filters.py  provider.py  segment.py
pysatl_cpd/typedefs/: __init__.py  base.py  frozendict.py
tests/contracts/: __init__.py  conftest.py
tests/contracts/core/: test_change_point_detector_contract.py  test_online_algorithm_contract.py  test_online_detector_contract.py
tests/contracts/data/: test_data_provider_contract.py  test_data_transformer_contract.py  test_dataset_contract.py  test_labeled_data_contract.py
tests/golden/: stable_hash.json
tests/golden/algorithms/: autoregressive_cusum.json  crosier_cusum.json  page_two_sided_cusum.json  shewhart_control_chart.json  slope_kl_symbolic_divergence.json  univariate_gaussian_conjugate_bocpd.json  variance_two_sided_cusum.json  windowed_slope_kl_symbolic_divergence.json
tests/golden/benchmarks/: online_reset_totals.json
tests/golden/generators/: simple_series.json
tests/regression/: test_algorithm_outputs.py  test_benchmark_outputs.py  test_seeded_generators.py  test_stable_hash.py
tests/support/: __init__.py  algorithms.py  core.py  datasets.py  golden.py  metrics.py  providers.py
tests/unit/analysis/: test_metrics_utils.py
tests/unit/benchmark/: test_benchmark_generic.py  test_registry_io.py  test_registry_parallel.py  test_scenarios_base.py
tests/unit/core/: test_change_point_detector.py  test_change_point_detector_description.py  test_detection_trace.py  test_single_run.py
tests/unit/support/: test_algorithm_contract.py  test_detector_contracts.py
(+301 files in other folders)
